<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/logoback"
    tools:context=".dangnhap.DangNhapActivity"
    android:id="@+id/myrl">

    <ImageView
        android:background="@null"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/dv" />

    <EditText
        android:hint="@string/id"
        android:background="#ffffff"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:inputType="textPersonName"
        android:drawableLeft="@drawable/tennguoidun"
        android:ems="10"
        android:id="@+id/etUserName"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp" />

    <EditText
        android:hint="@string/mat_khau"
        android:drawableLeft="@drawable/matkau"
        android:background="#ffffff"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPassword"
        android:layout_below="@+id/etUserName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:background="#2196F3"
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_below="@+id/etPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:onClick="dangnhap"
        android:text="Login" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="35dp"
        android:layout_marginTop="20dp">
        <TextView
            android:textSize="25dp"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="Tạo tài khoản ? "
            />
        <TextView
            android:id="@+id/txt_dangki"
            android:textSize="25dp"
            android:textColor="#2196F3"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/dang_ki_txt_view"
            android:paddingLeft="5dp"
            android:onClick="dangki"
            />
    </LinearLayout>
</LinearLayout>